# graph_datasets

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.ci/: cuda.sh  docs.sh  install-cpu.sh  install-dev.sh  install.sh  nb.sh  py.sh  table_maker.sh
.github/workflows/: release.yml
configs/: nb.py
demos/: demo.ipynb  demo.py
docs/: conf.py  index.rst
docs/_static/css/: table.css
docs/rst/: data_info.rst  graph_datasets.datasets.rst  graph_datasets.utils.rst  load_data.rst  src.utils.rst  table.rst
docs/scripts/: table_maker.py
docs/tpls/: package.rst_t
graph_datasets/: __init__.py  data_info.py  load_data.py
graph_datasets/datasets/: __init__.py  cola.py  critical.py  dgl.py  linkx.py  ogb.py  pyg.py  sdcn.py
graph_datasets/utils/: __init__.py  bot.py  common.py  model_management.py  output.py  plt.py  statistics.py
graph_datasets/utils/evaluation/: __init__.py  eval.py  eval_tools.py  evaluation.py
scripts/: build-publish.sh  bump.sh  install-dev.sh  install.sh  nb.sh
src/: __init__.py  load_data.py
src/source/: __init__.py  data_info.py
src/utils/: __init__.py
tests/: statistics.py  test.ipynb  test.py
